--- a/index.html
+++ b/index.html
@@ -4,12 +4,179 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/app.css">
-    <title>Document</title>
+    <title>Ecommerce - Inicio</title>
 </head>
 <body>
-    
+
+    <header class="py-5">
+        <h1 class="text-center">Tienda<span class="text-blue">Muebles</span></h1>
+    </header><!--.header-->
+
+    <div class="border-top pt-4">
+        <div class="navbar navbar-expand-lg container navbar-light">
+            <a href="/" class="navbar-brand d-lg-none fs-2 fw-bold text-uppercase text-blue">Tienda Muebles</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navegacion">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div id="navegacion" class="collapse navbar-collapse">
+                <nav class="navbar-nav container text-center d-flex flex-md-row justify-content-md-between">         
+                    <a class="nav-link text-dark" href="index.html">Inicio</a>
+                    <a class="nav-link text-dark" href="nosotros.html">Nosotros</a>
+                    <a class="nav-link text-dark" href="tienda.hrml">Tienda</a>
+                    <a class="nav-link text-dark" href="blog.html">Blog</a>
+                    <a class="nav-link text-dark" href="galeria.html">Galería</a>
+                    <a class="nav-link text-dark" href="contacto.html">Contacto</a>
+                </nav><!--.navegacion-->
+            </div>            
+        </div>    
+    </div><!--container-->
+
+    <div class="hero"></div><!--.hero-->
+
+
+    <main class="container-xl py-5">
+        <h2 class="text-center my-5">Nuestros Productos</h2>
+
+        <div class="row g-0 pt-5">
+            <div class="col-md-8 producto">
+                <img src="img/producto1.jpg" alt="imagen producto" class="img-fluid">
+            </div>
+            <div class="col-md-4 bg-blue text-center text-light p-5 d-flex flex-column justify-content-center" >
+                <h3>Producto 1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error sed quos corrupti, optio quidem facilis.</p>
+                <p class="fs-1 fw-bold">$500.000</p>
+                <a href="" class="btn btn-green fw-bold text-uppercase fs-3 py-3">Agregar al Carrito</a>
+            </div>
+        </div><!--producto1-->
+
+        <div class="row">
+            <div class="col-md-6 mt-4">
+                <div class="card">
+                    <img src="img/producto2.jpg" class="img-fluid" alt="">
+                    <div class="card-body bg-blue text-center text-light p-5">
+                        <h3>Producto 2</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error sed quos corrupti, optio quidem facilis.</p>
+                        <p class="fs-1 fw-bold">$200.000</p>
+                        <a href="" class="btn btn-green fw-bold text-uppercase fs-3 py-3 d-block">Agregar al Carrito</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mt-4">
+                <div class="card">
+                    <img src="img/producto3.jpg"  class="img-fluid" alt="">
+                    <div class="card-body bg-blue text-center text-light p-5">
+                        <h3>Producto 3</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error sed quos corrupti, optio quidem facilis.</p>
+                        <p class="fs-1 fw-bold">$300.000</p>
+                        <a href="" class="btn btn-green fw-bold text-uppercase fs-3 py-3 d-block">Agregar al Carrito</a>
+                    </div>
+                </div>
+            </div>
+        </div><!--producto 2 y 3-->
+
+        <div class="row">
+            <div class="col-md-4 mt-4">
+                <div class="card">
+                    <img src="img/producto4.jpg"  class="img-fluid" alt="">
+                    <div class="card-body bg-blue text-center text-light p-5">
+                        <h3>Producto 4</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error sed quos corrupti, optio quidem facilis.</p>
+                        <p class="fs-1 fw-bold">$50.000</p>
+                        <a href="" class="btn btn-green fw-bold text-uppercase fs-3 py-3 d-block">Agregar al Carrito</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mt-4">
+                <div class="card">
+                    <img src="img/producto5.jpg" class="img-fluid"  alt="">
+                    <div class="card-body bg-blue text-center text-light p-5">
+                        <h3>Producto 5</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error sed quos corrupti, optio quidem facilis.</p>
+                        <p class="fs-1 fw-bold">$200.000</p>
+                        <a href="" class="btn btn-green fw-bold text-uppercase fs-3 py-3 d-block">Agregar al Carrito</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mt-4">
+                <div class="card">
+                    <img src="img/producto6.jpg" class="img-fluid"  alt="">
+                    <div class="card-body bg-blue text-center text-light p-5">
+                        <h3>Producto 6</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error sed quos corrupti, optio quidem facilis.</p>
+                        <p class="fs-1 fw-bold">$100.000</p>
+                        <a href="" class="btn btn-green fw-bold text-uppercase fs-3 py-3 d-block">Agregar al Carrito</a>
+                    </div>
+                </div>
+            </div>
+        </div><!--productos 4, 5 y 6-->
+        <!--.productos-->
+    </main>
+    <section class="container-xl py-5">
+        <h2 class="text-center py-5">Categorías de Productos</h2>
+
+        <div class="row mt-5">
+            <div class="col-md-4 categoria">
+                <div class="overflow-hidden">
+                    <img src="img/categoria1.jpg" class="img-fluid" alt="">
+                </div>
+                <a class="text-dark fs-2 text-decoration-none d-block text-center py-3" href="#">Oficina</a>
+            </div>
+            <div class="col-md-4 categoria">
+                <div class="overflow-hidden">
+                    <img src="img/categoria2.jpg" class="img-fluid" alt="">
+                </div>
+                <a class="text-dark fs-2 text-decoration-none d-block text-center py-3" href="#">Hogar</a>
+            </div>
+            <div class="col-md-4 categoria">
+                <div class="overflow-hidden">
+                    <img src="img/categoria3.jpg" class="img-fluid" alt="">
+                </div>
+                <a class="text-dark fs-2 text-decoration-none d-block text-center py-3" href="#">Cocina</a>
+            </div>
+        </div>
+    </section><!--.categoria producto-->
+
+    <footer class="pt-5 mt-5 border-top">
+        <div class="container-xl mt-5">
+            <div class="row">
+                <div class="col-md-4 mb-4 mb-md-0 text-center">
+                    <h3>Categorías</h3>
+                    <nav class="d-flex flex-column">
+                        <a class="nav-link text-dark" href="#">Cocina</a>
+                        <a class="nav-link text-dark" href="#">Oficina</a>
+                        <a class="nav-link text-dark" href="#">Jardín</a>
+                        <a class="nav-link text-dark" href="#">Cochera</a>
+                        <a class="nav-link text-dark" href="#">Dormitorios</a>
+                    </nav>
+                </div>
+                <div class="col-md-4 mb-4 mb-md-0 text-center">
+                    <h3>Sobre Nosotros</h3>
+                    <nav class="d-flex flex-column">
+                        <a class="nav-link text-dark" href="#">Nuestra Historia</a>
+                        <a class="nav-link text-dark" href="#">Misión,Visión y Valores</a>
+                        <a class="nav-link text-dark" href="#">Carrera</a>
+                        <a class="nav-link text-dark" href="#">Políticas de Privacidad</a>
+                        <a class="nav-link text-dark" href="#">Términas del Servicio</a>
+                    </nav>
+                </div>
+                <div class="col-md-4 mb-4 mb-md-0 text-center">
+                    <h3>Soporte</h3>
+                    <nav class="d-flex flex-column">
+                        <a class="nav-link text-dark" href="#">Preguntas Frecuentes</a>
+                        <a class="nav-link text-dark" href="#">Ayuda en Línea</a>
+                        <a class="nav-link text-dark" href="#">Confianza y Seguridad</a>
+                    </nav>
+                </div>
+            </div>
+        </div>
+
+        <p class="mt-5 text-center fs-2">Todos los derechos reservados, Tienda Muebles</p>
+    </footer>
 
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
