--- a/nosotros.html
+++ b/nosotros.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/app.css">
-    <title>Ecommerce - </title>
+    <title>Ecommerce - Nosotros</title>
 </head>
 <body>
 
@@ -36,14 +36,18 @@
         </div>    
     </div><!--container-->
 
-    
     <main class="container-xl py-5">
-        <h2 class="text-center my-5">Nombre pagina</h2>
+        <h2 class="text-center my-5">Sobre Nosotros</h2>
 
-        <!--
-            Contenido aqui
-        -->
-
+        <div class="row align-items-center g-5">
+            <div class="col-md-6">
+                <img src="img/nosotros.jpg" class="img-fluid" alt="sonre nosotros">
+            </div>
+            <div class="col-md-6">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas itaque nesciunt quo molestias omnis nobis. Nostrum, dolorem ratione? Hic pariatur similique accusantium consequatur culpa distinctio!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas itaque nesciunt quo molestias omnis nobis. Nostrum, dolorem ratione? Hic pariatur similique accusantium consequatur culpa distinctio!</p>
+            </div>
+        </div>
     </main><!--.main-->
 
     <footer class="pt-5 mt-5 border-top">
