--- a/tienda.html
+++ b/tienda.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/app.css">
-    <title>Ecommerce - Inicio</title>
+    <title>Ecommerce - Tienda</title>
 </head>
 <body>
 
@@ -27,7 +27,7 @@
                 <nav class="navbar-nav container text-center d-flex flex-md-row justify-content-md-between">         
                     <a class="nav-link text-dark" href="index.html">Inicio</a>
                     <a class="nav-link text-dark" href="nosotros.html">Nosotros</a>
-                    <a class="nav-link text-dark" href="tienda.html">Tienda</a>
+                    <a class="nav-link text-dark" href="tienda.hrml">Tienda</a>
                     <a class="nav-link text-dark" href="blog.html">Blog</a>
                     <a class="nav-link text-dark" href="galeria.html">Galería</a>
                     <a class="nav-link text-dark" href="contacto.html">Contacto</a>
@@ -36,9 +36,7 @@
         </div>    
     </div><!--container-->
 
-    <div class="hero"></div><!--.hero-->
-
-
+    
     <main class="container-xl py-5">
         <h2 class="text-center my-5">Nuestros Productos</h2>
 
@@ -116,30 +114,6 @@
         </div><!--productos 4, 5 y 6-->
         <!--.productos-->
     </main>
-    <section class="container-xl py-5">
-        <h2 class="text-center py-5">Categorías de Productos</h2>
-
-        <div class="row mt-5">
-            <div class="col-md-4 categoria">
-                <div class="overflow-hidden">
-                    <img src="img/categoria1.jpg" class="img-fluid" alt="">
-                </div>
-                <a class="text-dark fs-2 text-decoration-none d-block text-center py-3" href="#">Oficina</a>
-            </div>
-            <div class="col-md-4 categoria">
-                <div class="overflow-hidden">
-                    <img src="img/categoria2.jpg" class="img-fluid" alt="">
-                </div>
-                <a class="text-dark fs-2 text-decoration-none d-block text-center py-3" href="#">Hogar</a>
-            </div>
-            <div class="col-md-4 categoria">
-                <div class="overflow-hidden">
-                    <img src="img/categoria3.jpg" class="img-fluid" alt="">
-                </div>
-                <a class="text-dark fs-2 text-decoration-none d-block text-center py-3" href="#">Cocina</a>
-            </div>
-        </div>
-    </section><!--.categoria producto-->
 
     <footer class="pt-5 mt-5 border-top">
         <div class="container-xl mt-5">
