--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/app.css">
-    <title>Ecommerce - </title>
+    <title>Ecommerce - Contacto</title>
 </head>
 <body>
 
@@ -38,11 +38,71 @@
 
     
     <main class="container-xl py-5">
-        <h2 class="text-center my-5">Nombre pagina</h2>
+        <h2 class="text-center my-5">Contacto</h2>
 
-        <!--
-            Contenido aqui
-        -->
+        <div class="row justify-content-center">
+            <form class="col-md-8 needs-validation" novalidate>
+                <fieldset>                    
+                    <legend class="bg-blue text-center text-light fs-2">Tus Datos</legend>
+                    <div class="mb-3">
+                        <label class="form-label" for="nombre">Nombre:</label>
+                        <input type="text" id="nombre" class="form-control py-3 fs-4" placeholder="Tu Nombre" required>
+                        <span class="invalid-feedback">Campo Obligatorio</span>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="asunto">Asunto:</label>
+                        <input type="text" id="asunto" class="form-control py-3 fs-4" placeholder="Tu Asunto" required>
+                        <span class="invalid-feedback">Campo Obligatorio</span>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="email">E-mail:</label>
+                        <input type="email" id="email" class="form-control py-3 fs-4" placeholder="Tu E-mail" required>
+                        <span class="invalid-feedback">Campo Obligatorio</span>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="tel">Teléfono:</label>
+                        <input type="tel" id="tel" class="form-control py-3 fs-4" placeholder="Tu Teléfono" required>
+                        <span class="invalid-feedback">Campo Obligatorio</span>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="mensaje">Mensaje:</label>
+                        <textarea name="" id="mensaje" cols="30" rows="10" class="form-control" required></textarea>
+                            <span class="invalid-feedback">Campo Obligatorio</span>
+                    </div>
+                </fieldset>
+
+                <fieldset>                    
+                    <legend class="bg-blue text-center text-light fs-2">País</legend>
+                    <div class="mb-3">
+                        <label class="form-label" for="pais">Pais:</label>
+                        <select id="pais" class="form-control  py-3 fs-4" required>
+                            <option value="">--Seleccione--</option>
+                            <option value="cl">Chile</option>
+                            <option value="mx">México</option>
+                            <option value="ar">Argentina</option>
+                        </select>
+                        <span class="invalid-feedback">Campo Obligatorio</span>
+                    </div>
+                </fieldset>
+                
+                <fieldset>                    
+                    <legend class="bg-blue text-center text-light fs-2">Información xtra</legend>
+                    <div class="mb-3">
+                        <label class="form-label" for="proveedor">Proveedor:</label>
+                        <input type="radio" class="form-check-input" id="proveedor" name="radio" required>
+                        <span class="invalid-feedback">Campo Obligatorio</span>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="cliente">Cliente:</label>
+                        <input type="radio" class="form-check-input" id="cliente" name="radio" required>
+                        <span class="invalid-feedback">Campo Obligatorio</span>
+                    </div>
+                </fieldset>
+                <div class="d-grid d-md-flex">
+                    <input type="submit" class="btn btn-secondary py-3 px-5 fs-3 fw-bold text-uppercase">
+                </div>
+            </div>
+        </div>
 
     </main><!--.main-->
 
@@ -84,5 +144,6 @@
     </footer>
 
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
